fixed annoying footer alignment

--- a/src/globals.css
+++ b/src/globals.css
@@ -63,9 +63,11 @@ a:hover {
 .footer {
     position: absolute;
     bottom: 0;
+    width: 100%;
+    justify-content: center;
 }
 
-@media (max-height: 970px){
+@media (max-height: 46rem){
     .footer {
         position: relative;
     }
